--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <hr/>
     <div class="choices">
 
-        <button onclick = "playGame('rock') " data-title = "Rock">✊</button>
-        <button onclick = "playGame('paper')" data-title = "Paper">🖐</button>
-        <button onclick = "playGame('scissors')" data-title = "Scissors">✌️</button> 
-        <button onclick = "playGame('lizard')" data-title = "Lizard">🦎</button>
-        <button onclick = "playGame('spock')" data-title = "Spock">🖖</button> 
+        <button onclick = "playGame('Rock') " data-title = "Rock">✊</button>
+        <button onclick = "playGame('Paper')" data-title = "Paper">🖐</button>
+        <button onclick = "playGame('Scissors')" data-title = "Scissors">✌️</button> 
+        <button onclick = "playGame('Lizard')" data-title = "Lizard">🦎</button>
+        <button onclick = "playGame('Spock')" data-title = "Spock">🖖</button> 
         
     </div>
 
